--- a/css/main.css
+++ b/css/main.css
@@ -53,9 +53,16 @@ img {
 	background-image: url(../img/hero-image.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-	padding-bottom: 75px;
+	padding-bottom: 40px;
 	padding-top: 30px;
 }
+
+#hero p {
+	font-size: 20px;
+	text-align: center;
+	padding-left: 270px;
+}
+
 
 #services {
 	background: #dbeef4;
@@ -81,10 +88,14 @@ img {
 
 #about {
 	padding-bottom: 25px;
+	background-color: #c5db6e;
+	margin-top: -30px;
 }
 
 #conference {
 	padding-bottom: 20px;
+	background-color: #c5db6e;
+	margin-top: -30px;
 }
 
 /*--------Backgrounds-----------*/
@@ -94,13 +105,14 @@ img {
 h1 {
 	text-align: center;
 	font-size: 50px;
-	margin: 0 auto;
-	float: right;
 	padding-top: 50px;
+	padding-left: 250px;
+
 }
 
 h1 p {
 	text-align: center;
+	padding-left: 400px;
 }
 
 h2 {
@@ -176,6 +188,7 @@ img {
 
 #icon {
 	padding-left: 400px;
+	margin: 0 auto;
 }
 
 #contact img {
@@ -184,18 +197,14 @@ img {
 /*--------Images-----------*/
 /*--------Navigation-----------*/
 
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
+
 
 ul li {
 	display: inline-block;
 }
 
 nav {
-	padding-left: 700px;
+	padding-left: 600px;
 	word-spacing: 50px;
 	float: right;
 }
@@ -233,6 +242,11 @@ a:hover {
 	background-color: #dbeef4;
 }
 
+#button-one {
+	padding-left: 200px;
+	padding-top: 100px;
+}
+
 /*--------Buttons-----------*/
 
 /*--------Form-----------*/
@@ -260,10 +274,16 @@ input[type~="email"] {
 
 textarea {
 	width: 400px;
-	height: 150px;
+	height: 100px;
 	display: block;
-	float: left;
 }
+
+#contact .col-1-2:last-child {
+	align: center;
+	font-size: 10px;
+}
+
+
 
 /*--------Form-----------*/
 
@@ -362,6 +382,7 @@ textarea {
 
 .col-8-10 {
 	width: 80%;
+	margin: 0 auto;
 }
 
 .col-5-11 {
@@ -520,13 +541,20 @@ textarea {
 	.wrapper {
 		width: 98%;
 	}
-	.col-1-3, .col-2-3 {
+	.col-1-3, .col-2-3, .col-1-4, .col-1-2{
 		width: 100%;
 		padding: 0 0 20px 0;
 	}
+	
 	.col-1-4 {
-		width: 50%;
+		text-align: center;
 	}
+	
+	.col-1-4 img {
+		width: 50%;
+		margin-left: -50px;
+	}
+	
 	.col-1-4:nth-child(2) {
 		padding: 0 0 20px 10px; 
 	}
