--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,27 @@
 @charset "UTF-8";
 /* CSS Document */
 
+/* Table of Contents
+--------------------------------1 Format
+--------------------------------------1.1 Column Format
+--------------------------------------1.2 Backgrounds
+--------------------------------------1.3 Buttons
+--------------------------------------1.4 Images
+--------------------------------2 Navigation 
+--------------------------------------2.1 Main
+--------------------------------3 Structure
+--------------------------------------3.1 Site Form
+--------------------------------------3.2 Site Header
+--------------------------------4 Typography
+--------------------------------------4.1 Typography
+--------------------------------5 Utility
+--------------------------------------5.1 Columns Floats, Positions, Displays
+--------------------------------------------*/
+
+/*-----------------------------------FORMAT----------------------------*/
+
+/*----------Column Format------------*/
+
 *, *:after, *:before {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -41,136 +62,93 @@ img {
 [class*="col-"]:last-of-type {   
 	padding-right: 0;
 }
+/*----------Column Format------------*/
 
 /*---------------Backgrounds----------*/
-
-#header {
-	background: #c5db6e;
-	height: 100px;
-}
 
 #hero {
 	background-image: url(../img/hero-image.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-	padding-bottom: 40px;
 	padding-top: 30px;
 }
 
 #hero p {
-	font-size: 20px;
+	font-size: 1.5rem;
 	text-align: center;
 	padding-left: 270px;
 }
 
-
-#services {
+#services, #contact {
 	background: #dbeef4;
-	padding-bottom: 60px;
+}
+
+#services, #choose {
 	padding-top: 15px;
+}
+
+#services, #choose {
+	padding-bottom: 80px;
+}
+
+#about, #footer, #conference, #header {
+	background: #c5db6e;
 }
 
 #choose {
 	background: #346eac;
-	padding-top: 15px;
-	padding-bottom: 60px;
 }
 
 #contact {
-	background: #dbeef4;
 	padding-top: 10px;
 	padding-bottom: 50px;
 }
 
-#footer {
-	background: #c5db6e;
+#about, #conference {
+	margin-top: -30px;
 }
 
 #about {
 	padding-bottom: 25px;
-	background-color: #c5db6e;
-	margin-top: -30px;
 }
 
 #conference {
 	padding-bottom: 20px;
-	background-color: #c5db6e;
-	margin-top: -30px;
 }
 
 /*--------Backgrounds-----------*/
 
-/*--------Headers-----------*/
+/*--------Buttons-----------*/
 
-h1 {
+#btn-one, #btn-two, #btn-three {
 	text-align: center;
-	font-size: 50px;
-	padding-top: 50px;
-	padding-left: 250px;
-
+	font-size: 1rem;
 }
 
-h1 p {
-	text-align: center;
-	padding-left: 400px;
+#btn-one a, #btn-two a, #btn-three a {
+	background-color: #c5db6e;
+	padding: 10px 35px;
 }
 
-h2 {
-	text-align: center;
-	font-size: 30px;
-	padding-top: 30px;
-}
-
-h3 {
-	text-align: center;
-	font-style: italic;
-	font-size: 20px;
-}
-
-
-
-/*--------Typography-----------*/
-p {
-	font-size: 12px;
-}
-
-#choose {
+#btn-one a:hover, #btn-two a:hover{
+	background-color: #346eac;
 	color: white;
 }
 
-#choose h3 {
-	text-align: left;
+#btn-three a:hover {
+	color: #346eac;
+	background-color: #dbeef4;
 }
 
-#choose p {
-	line-height: 24px;
-	width: 400px;
-	font-size: 15px;
+#btn-one {
+	padding-left: 200px;
+	padding-top: 100px;
 }
 
-#services {
-	line-height: 24px;
+a:hover {
+	color: #ffffff;
 }
-
-
-#about p {
-	text-align: center;
-	line-height: 24px;
-}
-
-#conference p, #contact p {
-	text-align: center;	
-}
-
-#contact p {
-	padding-top: 0;
-}
-
-.col-1-2 p {
-	text-align: left;
-}
-
-/*--------Typography-----------*/
+/*--------Buttons-----------*/
 
 /*--------Images-----------*/
 img {
@@ -194,100 +172,154 @@ img {
 #contact img {
 	height: 20px;
 }
+
+figure {
+	margin: 0;
+}
 /*--------Images-----------*/
-/*--------Navigation-----------*/
 
 
+/*------------------------------------NAVIGATION----------------*/
+
+/*--------Main-----------*/
 
 ul li {
 	display: inline-block;
+	margin-right: 2rem;
 }
 
 nav {
-	padding-left: 600px;
-	word-spacing: 50px;
 	float: right;
+	padding-top: 1.5rem;
 }
 
 a {
 	color: #000000;
 	text-decoration: none;
-	font-size: 12px;
 }
 
 a:hover {
 	color: white;
 }
-/*--------Navigation-----------*/
+/*--------Main-----------*/
 
-/*--------Buttons-----------*/
-
-#button-one, #button-two, #button-three {
-	text-align: center;
-	font-size: 16px;
-}
-
-#button-one a, #button-two a, #button-three a {
-	background-color: #c5db6e;
-	padding: 10px 35px;
-}
-
-#button-one a:hover, #button-two a:hover {
-	background-color: #346eac;
-	color: white;
-}
-
-#button-three a:hover {
-	color: #346eac;
-	background-color: #dbeef4;
-}
-
-#button-one {
-	padding-left: 200px;
-	padding-top: 100px;
-}
-
-/*--------Buttons-----------*/
+/*------------------------------------STRUCTURE----------------*/
 
 /*--------Form-----------*/
 
 form {
 	align: center;
-	padding-left: 70px;
 }
 
 form label {
-	font-size: 16px;
+	font-size: .75rem;
 }
 
-input[type="text"] {
-	width: 500px;
-	height: 40px;
+input[type="text"], input[type~="email"]  {
+	width: 100%;
+	height: 2rem;
 	display: block;
 }
 
-input[type~="email"] {
-	width: 500px;
-	height: 40px;
-	display: block;
+input[type="submit"] {
+	float: right;
+	background-color: #c5db6e;
 }
 
 textarea {
-	width: 400px;
-	height: 100px;
+	width: 100%;
+	height: 4rem;
 	display: block;
 }
 
 #contact .col-1-2:last-child {
 	align: center;
-	font-size: 10px;
+}
+
+section:nth-child(7) .col-1-2:nth-child(4) {
+	margin-top: 2rem;
+}
+
+#conference p, #contact p, #about p  {
+	text-align: center;	
+}
+
+#contact .col-1-2 p {
+	text-align: left;
+	font-size: .75rem;
+	margin-top: 2rem;
+	margin-bottom: .25rem;
+}
+/*--------Form-----------*/
+
+
+/*--------Headers-----------*/
+
+h1, h1 p, h2, h3 {
+	text-align: center;
+}
+
+h1 {
+	font-size: 3.25rem;
+	padding-top: 50px;
+	padding-left: 250px;
+}
+
+h1 p {
+	padding-left: 400px;
+}
+
+h2 {
+	font-size: 2rem;
+	padding-top: 30px;
+}
+
+h3 {
+	font-style: italic;
+	font-size: 20px;
+}
+
+/*--------Headers-----------*/
+
+/*------------------------------------Typography----------------*/
+
+/*--------Typography-----------*/
+p {
+	font-size: 1rem;
+}
+
+#choose {
+	color: white;
+}
+
+#choose h3, .col-1-2 p {
+	text-align: left;
+}
+
+#choose p {
+	line-height: 24px;
+	width: 100%;
+	font-size: 1rem;
+}
+
+#services {
+	line-height: 1.5rem;
+}
+
+#about p {
+	line-height: 24px;
 }
 
 
+#contact p {
+	padding-top: 0;
+}
 
-/*--------Form-----------*/
+/*--------Typography-----------*/
 
-/*Columns*/
+
+/*----------------------------------------------UTILITY---------------*/
+/*----Columns Floats, Positions, Displays-------*/
 
 .col-1-1 {
 	width: 100%;
@@ -511,10 +543,6 @@ textarea {
 	background: red;
 }
 
-.col-5-11 div {
-	height: 300px;
-	background: green;
-}
 
 .col-6-11  div {
 	height: 300px;
@@ -541,6 +569,19 @@ textarea {
 	.wrapper {
 		width: 98%;
 	}
+	
+	h1 {
+		padding: 0;
+	}
+	
+	.col-8-10 {
+		width: 100%;
+	}
+	
+	#btn-one, #hero p {
+		padding-left: 0;
+	}
+	
 	.col-1-3, .col-2-3, .col-1-4, .col-1-2{
 		width: 100%;
 		padding: 0 0 20px 0;
@@ -561,6 +602,11 @@ textarea {
 	.col-1-4:nth-child(3) {
 		padding: 0 10px 20px 0; 
 	}
+	
+	#icon {
+		padding-left: 0;
+	}
+
 }
 
 
