--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,11 @@ img {
 
 #btn-one {
 	padding-left: 200px;
-	padding-top: 100px;
+	padding-top: 120px;
+}
+
+#btn-two {
+	padding-top: 20px;
 }
 
 a:hover {
@@ -160,12 +164,11 @@ img {
 }
 
 .logo {
-	position: relative;
 	padding-top: 35px;
 }
 
 #icon {
-	padding-left: 400px;
+	padding-left: 425px;
 	margin: 0 auto;
 }
 
@@ -261,7 +264,7 @@ h1, h1 p, h2, h3 {
 
 h1 {
 	font-size: 3.25rem;
-	padding-top: 50px;
+	padding-top: 70px;
 	padding-left: 250px;
 }
 
@@ -276,7 +279,7 @@ h2 {
 
 h3 {
 	font-style: italic;
-	font-size: 20px;
+	font-size: 1.5rem;
 }
 
 /*--------Headers-----------*/
@@ -566,22 +569,15 @@ p {
 
 
 @media screen and (max-width: 480px) {
+	
 	.wrapper {
-		width: 98%;
+		width: 90%;
 	}
-	
-	h1 {
-		padding: 0;
-	}
-	
+
 	.col-8-10 {
 		width: 100%;
 	}
-	
-	#btn-one, #hero p {
-		padding-left: 0;
-	}
-	
+
 	.col-1-3, .col-2-3, .col-1-4, .col-1-2{
 		width: 100%;
 		padding: 0 0 20px 0;
@@ -592,8 +588,8 @@ p {
 	}
 	
 	.col-1-4 img {
-		width: 50%;
-		margin-left: -50px;
+		width: 60%;
+		margin-left: -85px;
 	}
 	
 	.col-1-4:nth-child(2) {
@@ -602,11 +598,28 @@ p {
 	.col-1-4:nth-child(3) {
 		padding: 0 10px 20px 0; 
 	}
+
+	#btn-one, #hero p {
+		padding-left: 0;
+	}
 	
 	#icon {
 		padding-left: 0;
 	}
+	
+	nav {
+		padding-top: 0;
+	}
 
+	#contact img {
+		height: 35px;
+		padding-left: 50px;
+	}
+	
+	h1 {
+		padding: 0;
+	}
+	
 }
 
 
